--- a/web scraping.ipynb
+++ b/web scraping.ipynb
@@ -240,7 +240,7 @@
     "    response=requests.get(url)\n",
     "    if response.status_code==200:\n",
     "        soup=BeautifulSoup(response.text,'html.parser')\n",
-    "        headlines=soup.find_all('div')\n",
+    "        headlines=soup.find_all('div') # headlines=soup.find_all('div',class_=h) you can use this if you want extract informatiom from certain sector of web page\n",
     "        if headlines:\n",
     "            for i in headlines:\n",
     "                textelement=i.text\n",
